<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_pink"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/qq"
        android:layout_width="200dp"
        android:layout_height="330dp"
        android:contentDescription="@string/City1"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.167"
        app:srcCompat="@drawable/que" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/king_choose_btn"
        android:textSize="20sp"
        android:visibility="visible"
        app:backgroundTint="#2FE138"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.943" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#6DFA7398"
        android:checkedButton="@id/tog00"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/button_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9">

        <ToggleButton
            android:id="@+id/tog00"
            android:layout_width="125dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/chose1"
            android:textOff="@string/chose1"
            android:textOn="@string/chose1"
            android:visibility="visible" />

        <ToggleButton
            android:id="@+id/tog01"
            android:layout_width="125dp"
            android:layout_height="65dp"
            android:checked="false"
            android:text="@string/chose2"
            android:textOff="@string/chose2"
            android:textOn="@string/chose2"
            android:visibility="visible" />

        <ToggleButton
            android:id="@+id/tog02"
            android:layout_width="125dp"
            android:layout_height="65dp"
            android:checked="false"
            android:text="@string/chose3"
            android:textOff="@string/chose3"
            android:textOn="@string/chose3"
            android:visibility="visible" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/king_choose_text1"
        android:textColor="#000000"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup2"
        app:layout_constraintEnd_toEndOf="@+id/qq"
        app:layout_constraintStart_toStartOf="@+id/qq"
        app:layout_constraintTop_toBottomOf="@+id/qq"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>