<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_pink"
        tools:ignore="MissingConstraints" />


    <androidx.constraintlayout.widget.Group
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="button2,button3,question" />

    <androidx.constraintlayout.widget.Group
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="end_text,end_text_title,other,img" />

    <androidx.constraintlayout.widget.Group
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="choose_4,choose_3,choose_2,choose_1,choose_title" />

    <Button
        android:id="@+id/choose_4"
        android:layout_width="330dp"
        android:layout_height="110dp"
        android:text="@string/cat_14"
        android:textSize="20sp"
        android:visibility="visible"
        app:backgroundTint="#BF2953"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_3"
        app:layout_constraintVertical_bias="0.14" />

    <Button
        android:id="@+id/choose_3"
        android:layout_width="330dp"
        android:layout_height="110dp"
        android:text="@string/cat_13"
        android:textSize="20sp"
        android:visibility="visible"
        app:backgroundTint="#BF2953"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_2"
        app:layout_constraintVertical_bias="0.065" />

    <Button
        android:id="@+id/choose_2"
        android:layout_width="330dp"
        android:layout_height="110dp"
        android:text="@string/cat_12"
        android:textSize="20sp"
        android:visibility="visible"
        app:backgroundTint="#BF2953"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_1"
        app:layout_constraintVertical_bias="0.042" />

    <Button
        android:id="@+id/choose_1"
        android:layout_width="330dp"
        android:layout_height="110dp"
        android:text="@string/cat_11"
        android:textSize="20sp"
        android:visibility="visible"
        app:backgroundTint="#BF2953"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/choose_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose"
        android:textColor="#2C0909"
        android:textSize="28sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/end_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/merriweather_light"
        android:text="@string/end"
        android:textColor="#000000"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078" />

    <TextView
        android:id="@+id/end_text"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/choose_end_text"
        android:text="@string/wait"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#201717"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/other"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img"
        app:layout_constraintVertical_bias="0.04" />

    <Button
        android:id="@+id/other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/merriweather_light"
        android:text="@string/other"
        android:textSize="24sp"
        android:visibility="visible"
        app:backgroundTint="#9912D3"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="visible"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-5921977233188947/1591988239"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button2"
        android:layout_width="270dp"
        android:layout_height="100dp"
        android:text="@string/Next"
        android:textSize="18sp"
        android:visibility="invisible"
        app:backgroundTint="#BF2953"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:text="@string/New1"
        android:textSize="18sp"
        android:visibility="invisible"
        app:backgroundTint="#BF2953"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.214" />

    <ImageView
        android:id="@+id/question"
        android:layout_width="198dp"
        android:layout_height="330dp"
        android:contentDescription="@string/City1"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.194"
        app:srcCompat="@drawable/que" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="180dp"
        android:layout_height="270dp"
        android:contentDescription="@string/City1"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/other"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/end_text_title"
        app:layout_constraintVertical_bias="0.04"
        app:srcCompat="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>