<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/Title_text"
        android:textColor="#ff0000"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/button"
        app:layout_constraintVertical_bias="0.529" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/What"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/christmas_scriptc"
        android:text="@string/CityChooseText"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="60sp"
        android:typeface="normal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108" />

    <Button
        android:id="@+id/Yaroslavl"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="152dp"
        android:layout_height="69dp"
        android:background="#CD1717"
        android:fontFamily="@font/montserrat"
        android:text="@string/City1"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:backgroundTint="#201A1A"
        app:iconTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/What"
        app:layout_constraintVertical_bias="0.071" />

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="244dp"
        android:layout_height="87dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/Nocity"
        android:textColor="#0037FF"
        android:textSize="16sp"
        app:backgroundTint="#FFFFFF"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Yaroslavl"
        app:layout_constraintVertical_bias="0.957" />


</androidx.constraintlayout.widget.ConstraintLayout>